Fixed fonts responsiveness on small screens

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -39,6 +39,7 @@ body {
   background-color: #39373a;
   width: 100%;
   height: 100%;
+  font-size: 1rem;
   padding: 0;
   margin: 0;
   overflow: auto;
